[package]
name = "overtask"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
exclude = [
  "scripts",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.87"
homepage = "https://example.com"
documentation = "https://example.com"
repository = "https://github.com/rotespferd/overtask"
authors = ["Marian Hahne"]
license = "GPL 3"

[workspace.dependencies]
overtask-todoist = { path = "crates/overtask-todoist" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
